Prevent wallet operations from the network thread, this causes the thread to hang.

BUG: 98801

svn path=/trunk/kdepim/; revision=388648